--- a/index.html
+++ b/index.html
@@ -3,150 +3,164 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>UniConnect - Student Portal</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="/graduation-cap.png" type="image/png">
+    <title>Uniconnect - Your All-in-One University Companion</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <div class="logo">
-            <i class="fas fa-graduation-cap"></i>
-            <span>UniConnect</span>
-        </div>
-        <nav>
-            <ul>
-                <li><a href="#home" class="active">Home</a></li>
-                <li><a href="#profile">Profile</a></li>
-                <li><a href="#schedule">Schedule</a></li>
-                <li><a href="#community">Community</a></li>
-                <li><a href="#premium">Premium</a></li>
+    <div class="bg-animation"></div>
+
+    <header id="header">
+        <nav class="container">
+            <div class="logo">Uniconnect</div>
+            <ul class="nav-links">
+                <li><a href="#features">Features</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
+            <a href="/login" class="cta-button">Dashboard</a>
         </nav>
-        <button class="theme-toggle" id="themeToggle">
-            <i class="fas fa-moon"></i>
-            <span>Dark Mode</span>
-        </button>
     </header>
 
-    <div class="container">
-        <div class="dashboard">
-            <!-- Sidebar -->
-            <div class="sidebar">
-                <div class="user-profile">
-                    <div class="avatar">
-                        <i class="fas fa-user-graduate"></i>
-                    </div>
-                    <div class="user-info">
-                        <h2>John Dixon</h2>
-                        <p>Computer Science and Engineering</p>
-                        <p>ID: 2410030278</p>
+    <section class="hero">
+        <div class="container">
+            <div class="hero-content">
+                <div class="hero-text">
+                    <h1>Your All-in-One University Companion</h1>
+                    <div class="subtitle">Simplify Your Academic Journey</div>
+                    <p>University life can be overwhelming, with classes to attend, assignments to complete, exams to prepare for, and deadlines to keep track of. That's where Uniconnect steps in — your personalized academic dashboard designed to simplify your student journey.</p>
+                    <div class="hero-buttons">
+                        <a href="/login" class="btn-primary">Dashboard</a>
+                        <!-- <a href="#" class="btn-secondary">Watch Demo</a> -->
                     </div>
                 </div>
-                <div class="sidebar-nav">
-                    <a href="#home" class="active"><i class="fas fa-home"></i> Dashboard</a>
-                    <a href="#notes"><i class="fas fa-book"></i> Course Notes</a>
-                    <a href="#assignments"><i class="fas fa-tasks"></i> Assignments</a>
-                    <a href="studyResource.html"><i class="fas fa-file-alt"></i> Study Resources</a>
-                    <a href="#previous"><i class="fas fa-history"></i> Previous Papers</a>
-                    <a href="#grades"><i class="fas fa-chart-line"></i> Grades & Progress</a>
-                </div>
-            </div>
-
-            <!-- Main Content -->
-            <div class="main-content">
-                <!-- Home / Academic Overview -->
-                <div class="tab-content active" id="homeContent">
-                    <h2 class="section-title"><i class="fas fa-home"></i> Academic Overview</h2>
-                    <p>Welcome back, John Dixon! Here's your academic overview for this semester.</p>
-                    
-                    <div class="resources-grid">
-                        <!-- Subject Cards -->
-                        <div class="resource-card">
-                            <div class="card-header"><i class="fas fa-database"></i><h3>Data Structures & Algorithms</h3></div>
-                            <div class="card-body">
-                                <p>Lecture notes, syllabus & question bank for DSA.</p>
-                                <div class="card-buttons">
-                                    <a href="#" class="btn">Syllabus</a>
-                                    <a href="#" class="btn">Notes</a>
-                                    <a href="#" class="btn">Question Bank</a>
-                                </div>
-                            </div>
+                <div class="hero-visual">
+                    <div class="dashboard-mockup">
+                        <div class="mockup-header">
+                            <div class="mockup-dot"></div>
+                            <div class="mockup-dot"></div>
+                            <div class="mockup-dot"></div>
                         </div>
-
-                        <div class="resource-card">
-                            <div class="card-header"><i class="fas fa-microchip"></i><h3>Digital Electronics & Communication</h3></div>
-                            <div class="card-body">
-                                <p>Complete DECO syllabus, lecture notes & question bank.</p>
-                                <div class="card-buttons">
-                                    <a href="#" class="btn">Syllabus</a>
-                                    <a href="#" class="btn">Notes</a>
-                                    <a href="#" class="btn">Question Bank</a>
-                                </div>
+                        <div class="mockup-content">
+                            <div class="mockup-item">
+                                <div>📚 Data Structures Assignment</div>
+                                <div style="color: #ff5f57; font-weight: 600;">Due Today</div>
                             </div>
-                        </div>
-
-                        <div class="resource-card">
-                            <div class="card-header"><i class="fas fa-square-root-alt"></i><h3>Mathematics for Computing</h3></div>
-                            <div class="card-body">
-                                <p>Math syllabus, solved notes & question papers.</p>
-                                <div class="card-buttons">
-                                    <a href="#" class="btn">Syllabus</a>
-                                    <a href="#" class="btn">Notes</a>
-                                    <a href="#" class="btn">Question Bank</a>
-                                </div>
+                            <div class="mockup-item">
+                                <div>📊 Attendance: Mathematics</div>
+                                <div style="color: #28ca42; font-weight: 600;">85%</div>
                             </div>
-                        </div>
-
-                        <div class="resource-card">
-                            <div class="card-header"><i class="fab fa-python"></i><h3>Python Programming</h3></div>
-                            <div class="card-body">
-                                <p>Python syllabus, lecture notes & coding question bank.</p>
-                                <div class="card-buttons">
-                                    <a href="#" class="btn">Syllabus</a>
-                                    <a href="#" class="btn">Notes</a>
-                                    <a href="#" class="btn">Question Bank</a>
-                                </div>
+                            <div class="mockup-item">
+                                <div>📋 Physics Lab Report</div>
+                                <div style="color: #ffbd2e; font-weight: 600;">2 days left</div>
                             </div>
-                        </div>
-
-                        <div class="resource-card">
-                            <div class="card-header"><i class="fas fa-spell-check"></i><h3>Verbal Ability and Speaking Skills</h3></div>
-                            <div class="card-body">
-                                <p>Verbal ability syllabus, notes & question bank for practice.</p>
-                                <div class="card-buttons">
-                                    <a href="#" class="btn">Syllabus</a>
-                                    <a href="#" class="btn">Notes</a>
-                                    <a href="#" class="btn">Question Bank</a>
-                                </div>
+                            <div class="mockup-item">
+                                <div>🎯 Upcoming: Mid-term Exam</div>
+                                <div style="color: #667eea; font-weight: 600;">Next Week</div>
                             </div>
                         </div>
                     </div>
                 </div>
-
-                <!-- Other sections stay same... -->
-                <!-- scheduleContent, communityContent, premiumContent -->
-
             </div>
         </div>
-    </div>
+    </section>
+
+    <section class="features" id="features">
+        <div class="container">
+            <h2 class="section-title">Everything You Need to Excel</h2>
+            <p class="section-subtitle">Powerful tools designed specifically for modern university students</p>
+            <div class="features-grid">
+                <div class="feature-card">
+                    <div class="feature-icon">📊</div>
+                    <h3>Attendance Tracking</h3>
+                    <p>Monitor your attendance percentage across all subjects with intelligent alerts when you're approaching minimum requirements.</p>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-icon">📝</div>
+                    <h3>Assignment Manager</h3>
+                    <p>Never miss a deadline again. Track all your assignments, projects, and submissions with smart deadline reminders.</p>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-icon">📚</div>
+                    <h3>Resource Library</h3>
+                    <p>Access past year question papers, study materials, and homework resources — all organized by subject and semester.</p>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-icon">🎯</div>
+                    <h3>Exam Preparation</h3>
+                    <p>Plan your study schedule effectively with exam calendars, revision trackers, and preparation milestones.</p>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-icon">🔔</div>
+                    <h3>Smart Notifications</h3>
+                    <p>Receive intelligent reminders for classes, deadlines, and important academic events tailored to your schedule.</p>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-icon">📈</div>
+                    <h3>Progress Analytics</h3>
+                    <p>Visualize your academic progress with detailed insights into your grades, attendance patterns, and performance trends.</p>
+                </div>
+            </div>
+        </div>
+
+
+
+    <section class="stats">
+        <div class="container">
+            <div class="stats-grid">
+                <div class="stat-item">
+                    <h3>50K+</h3>
+                    <p>Active Students</p>
+                </div>
+                <div class="stat-item">
+                    <h3>200+</h3>
+                    <p>Universities</p>
+                </div>
+                <div class="stat-item">
+                    <h3>95%</h3>
+                    <p>Success Rate</p>
+                </div>
+                <div class="stat-item">
+                    <h3>4.8★</h3>
+                    <p>User Rating</p>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <footer>
-        <p>&copy; 2025 UniConnect - University Student Portal. All rights reserved.</p>
-        <p>Designed with <i class="fas fa-heart" style="color: #ff6b6b;"></i> for students.</p>
-        <p>Visit <a style="color: beige;" href="https://dev-opify.netlify.app/" target="_blank">Dev-opify</a></p>
+        <div class="container">
+            <div class="footer-content">
+                <div class="footer-section">
+                    <h3>Uniconnect</h3>
+                    <p>Empowering students with organized academic planning and seamless university life management.</p>
+                </div>
+                <div class="footer-section">
+                    <h3>Features</h3>
+                    <a href="#">Attendance Tracking</a>
+                    <a href="#">Assignment Manager</a>
+                    <a href="#">Resource Library</a>
+                    <a href="#">Exam Preparation</a>
+                </div>
+                <div class="footer-section">
+                    <h3>Support</h3>
+                    <a href="#">Help Center</a>
+                    <a href="#">Contact Us</a>
+                    <a href="#">Privacy Policy</a>
+                    <a href="#">Terms of Service</a>
+                </div>
+                <div class="footer-section">
+                    <h3>Connect</h3>
+                    <a href="#">Twitter</a>
+                    <a href="#">LinkedIn</a>
+                    <a href="#">Instagram</a>
+                    <a href="#">Facebook</a>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>&copy; 2025 Uniconnect. All rights reserved.</p>
+            </div>
+        </div>
     </footer>
-
-    <!-- Floating Chatbot Button -->
-    <button id="chatbot-toggle">💬</button>
-
-    <!-- Chatbot Window -->
-    <div id="chatbot-window">
-        <div id="chat-header">Career Chatbot <span id="chat-close">×</span></div>
-        <div id="chat-messages"></div>
-        <input type="text" id="chat-input" placeholder="Type a message...">
-        <button id="send-btn">Send</button>
-    </div>
 
     <script src="script.js"></script>
 </body>
